--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,20 @@ body {
 .timeline {
   color:black;
 }
+
+.timeline h3 {
+  color: grey;
+  font-size: 1.75rem;
+}
+
+.timeline h2 {
+  font-size: 2.5rem;
+}
+
+.timeline p {
+  font-size: 1.2rem;
+}
+
 section, .container {
     padding-top: 0vh;
 }
@@ -65,7 +79,7 @@ nav {
 
 .nav-item {
     color: rgba(82,82,82,.7);
-    font-size: 16px;
+    font-size: 24px;
     margin: 18px;
 }
 
@@ -78,13 +92,14 @@ nav {
     color: #ffffff;
     font-family: "Mettalian", monospace;
     font-size: 7rem;
+    margin-bottom: -50px;
 }
 
 .heading-secondary {
     display: block;
     color: #ffffff;
     font-family: "Mettalian", monospace;
-    font-size: 7rem;
+    font-size: 9rem;
 }
 
 .col-3 {
@@ -126,7 +141,7 @@ nav {
     height: 25px;
     right: -17px;
     background-color: white;
-    border: 4px solid #FF9F55;
+    border: 4px solid purple;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
