Add flowers img beneath each secondary heading

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ nav {
   font-size: 1.2rem;
 }
 
-#nav-schedule .heading-secondary, #nav-wedding-party .heading-secondary {
+.heading-secondary {
   margin-bottom:-60px;
 }
 
