--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,9 @@ body {
   border-radius: .4rem;
 }
 
+#nav-registry .row img {
+  max-height: 3.25rem;
+}
 section, .container {
     padding-top: 0vh;
     height: 100vh;
