--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ nav {
     height: 25px;
     right: -17px;
     background-color: white;
-    border: 4px solid purple;
+    border: 4px solid #212c40;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
