--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ body {
   font-size: 1.2rem;
 }
 
-#nav-registry a {
+#registry a {
   width: 100%;
   height: 5rem;
   background-color: #f4f4f4;
@@ -102,7 +102,7 @@ body {
   border-radius: .4rem;
 }
 
-#nav-registry .row img {
+#registry .row img {
   max-height: 3.25rem;
 }
 section, .container {
@@ -116,33 +116,33 @@ nav {
 }
 
 @media only screen and (max-width: 600px) {
-  #nav-questions .answer {
+  #questions .answer {
     font-size: 1rem;
   }
-  #nav-questions .question {
+  #questions .question {
     font-size: 1rem !important;
   }
-  #nav-questions .row {
+  #questions .row {
     display: block !important;
   }
 }
 
-#nav-questions .row {
+#questions .row {
   display: table-row;
 }
 
-#nav-questions {
+#questions {
   font-size: 1.2rem;
 }
 
-#nav-questions .col-4 {
+#questions .col-4 {
   display: table-cell;
   vertical-align: middle;
   padding-bottom: 80px;
 }
 
 
-#nav-questions .question {
+#questions .question {
   font-size: 1.75rem;
   font-weight: bold;
 }
@@ -160,7 +160,7 @@ nav {
   margin-top: -60px;
   width: 250px;
 }
-#nav-schedule .col {
+#schedule .col {
   margin-bottom: 50px;
 }
 .nav-item {
@@ -171,20 +171,20 @@ nav {
 
 
 
-#nav-home .row, #nav-wedding-party .row {
+#home .row, #wedding-party .row {
     margin-bottom: 50px;
 }
 
-#nav-wedding-party .row h1 {
+#wedding-party .row h1 {
   font-size: 2.5rem;
 }
 
-#nav-wedding-party .row h2 {
+#wedding-party .row h2 {
   font-size: 1.75rem;
   font-style: italic;
 }
 
-#nav-wedding-party .row p {
+#wedding-party .row p {
   font-size: 1.2rem;
 }
 
@@ -203,17 +203,17 @@ nav {
     font-size: 8rem;
 }
 
-#nav-schedule h3 {
+#schedule h3 {
   font-size: 2.5rem;
 }
-#nav-schedule h4 {
+#schedule h4 {
   font-size: 1.2rem;
 }
 
-#nav-schedule .col .h1 {
+#schedule .col .h1 {
   font-size: 2.5rem;
 }
-#nav-schedule .col p {
+#schedule .col p {
   font-size: 1.2rem;
 }
 
