--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ nav {
     display: flex;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-device-width: 600px) {
   #questions .answer {
     font-size: 1rem;
   }
