--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ nav {
     }
   }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #questions .answer {
     font-size: 1rem;
   }
