--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,8 @@ nav {
     }
   }
 
-@media (max-width: 2000px) {
+  /*
+@media screen and (max-width: 2000px) {
   #questions .answer {
     font-size: 1rem;
   }
@@ -361,5 +362,10 @@ nav {
   #questions .row {
     display: block !important;
   }
+}
+*/
+
+#questions .row {
+  display: block !important;
 }
 
