--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ nav {
 }
 
 #questions .row {
-  display: block;
+  display: table-row;
 }
 
 #questions {
@@ -351,7 +351,7 @@ nav {
     }
   }
 
-  /*
+  
 @media screen and (max-width: 2000px) {
   #questions .answer {
     font-size: 1rem;
@@ -359,9 +359,5 @@ nav {
   #questions .question {
     font-size: 1rem !important;
   }
-  #questions .row {
-    display: block !important;
-  }
 }
-*/
 
